# protobuf-perlxs

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  Makefile.am  README  TODO  configure.ac  docker-compose.yml
.github/workflows/: test.yaml
examples/: README
examples/big/: Makefile.PL.in  README  big.proto  test.pl
examples/embedded/: Makefile.PL.in  README  error.proto  test.pl
examples/error/: Makefile.PL.in  README  error.proto  test.pl
examples/oneof/: Makefile.PL.in  README  person.proto  test.pl
examples/package/: Makefile.PL.in  Messages.pm  Messages.xs  README  messages.proto  test.pl
examples/simple/: README  person.proto  test.pl
examples/string_bytes/: Makefile.PL.in  README  string_bytes.proto  test.pl
examples/types/: Makefile.PL.in  README  test.pl  types.proto
src/: Makefile.am
src/google/protobuf/compiler/perlxs/: main.cc  perlxs_config.h.in  perlxs_generator.cc  perlxs_generator.h  perlxs_helpers.cc  perlxs_helpers.h
