SUBDIRS = src

EXTRA_DIST = \
	examples/README \
	examples/big/Makefile.PL.in \
	examples/big/big.proto \
	examples/big/README \
	examples/big/test.pl \
	examples/embedded/Makefile.PL.in \
	examples/embedded/error.proto \
	examples/embedded/README \
	examples/embedded/test.pl \
	examples/error/Makefile.PL.in \
	examples/error/error.proto \
	examples/error/README \
	examples/error/test.pl \
	examples/package/Makefile.PL.in \
	examples/package/Messages.pm \
	examples/package/Messages.xs \
	examples/package/Messages \
	examples/package/messages.proto \
	examples/package/README \
	examples/package/test.pl \
	examples/simple/Makefile.PL.in \
	examples/simple/person.proto \
	examples/simple/README \
	examples/simple/test.pl \
	examples/string_bytes/Makefile.PL.in \
	examples/string_bytes/string_bytes.proto \
	examples/string_bytes/README \
	examples/string_bytes/test.pl \
	examples/types/Makefile.PL.in \
	examples/types/types.proto \
	examples/types/README \
	examples/types/test.pl
